cmake_minimum_required(VERSION 3.4)

project(formatter_ex)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_library(formatter_ex STATIC formatter_ex.cpp formatter_ex.h)

target_link_libraries(formatter_ex PUBLIC
  libformatter
)

target_include_directories(formatter_ex PUBLIC
 ${CMAKE_CURRENT_SOURCE_DIR}
 /home/mapilsey/lab03/formatter_lib
)

