cmake_minimum_required(VERSION 3.4)

project(hello_world)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(hello_world hello_world.cpp)

target_include_directories(hello_world PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

target_link_libraries(hello_world PRIVATE
  /home/mapilsey/lab03/formatter_ex_lib/build/libformatter_ex.a
  /home/mapilsey/lab03/formatter_lib/build/libformatter.a
)


